--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fd1640121270df56f4317ada3e0b8f0d35124aedccdaee2088db23b2fba95a42"
+  "signature": "sha256:06665509f12951de8dc6c9bb75d07821cc5d32500b7033d01930228636b71bb3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2128,9 +2128,12 @@
       "from imaging import *\n",
       "\n",
       "kws={'kerph':   a.kpd,\n",
-      "     'kerpherr':a.kpe}\n",
+      "     'kerpherr':a.kpe,\n",
+      "     'wavl' :   a.hdr['filter'],\n",
+      "     'pitch':   a.hdr['pscale']}\n",
       "\n",
       "kpimobj = kerphimobj(a.kpi,kws=kws)\n",
+      "kpimobj.name = 'test'\n",
       "kpimobj.kp2pm = kpimobj.kerph2im()\n",
       "kpimobj.write()"
      ],
@@ -2138,11 +2141,20 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "IndentationError",
-       "evalue": "expected an indented block (mk_kp2implane.py, line 20)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"imaging/mk_kp2implane.py\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    self.fov = kws['FOV']\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Default FOV assigned: 80 pixels\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/local/lib/python2.7/dist-packages/pyfits/header.py:1108: PyfitsDeprecationWarning: The use of header.update() to add new keywords to a header is deprecated.  Instead, use either header.set() or simply `header[keyword] = value` or `header[keyword] = (value, comment)`.  header.set() is only necessary to use if you also want to use the before/after keyword arguments.\n",
+        "  \"keyword arguments.\", PyfitsDeprecationWarning)\n",
+        "/usr/local/lib/python2.7/dist-packages/pyfits/file.py:339: UserWarning: Overwriting existing file 'test_kerphim.fits'.\n",
+        "  warnings.warn(\"Overwriting existing file %r.\" % self.name)\n"
        ]
       }
      ],
@@ -2156,7 +2168,25 @@
       "Now run it!\n",
       "------------------------------'''\n",
       "\n",
-      "trial = MemImage(kpimobj, niter=400)\n",
+      "#\timsize -- the size of the image in pixels, needs to match input\n",
+      "#\t\t\t  file 'pixel matrix' size\n",
+      "#\talpha  -- A starting value for the MEM functional multiplier (default=1.0)\n",
+      "#\tgain   -- The servo gain for adjusting alpha to achieve chi^2=1\n",
+      "#\tniter  -- number of iterations\n",
+      "#\tprior  -- as mentioned at the start of this script, the prior\n",
+      "#\t\t\t  is used to contrain the flux\n",
+      "\n",
+      "\n",
+      "'''defaults'''\n",
+      "\n",
+      "imsize = 80\n",
+      "alpha = 1.0\n",
+      "gain = 0.1\n",
+      "prior = np.ones(imsize**2)/imsize**2.0/50\n",
+      "niter = 400\n",
+      "\n",
+      "trial = MemImage('test_kerphim.fits', niter=niter,imsize=imsize,alpha=alpha,gain=0.1,prior=prior)\n",
+      "\n",
       "im = trial.mem_image()\n",
       "\n",
       "## the rest is a plot\n",
@@ -2170,7 +2200,21 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "MemImage instance has no attribute 'kp2pm'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-9-0da0c2289775>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0mtrial\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMemImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test_kerphim.fits'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mniter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mniter\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mimsize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgain\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprior\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mprior\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0mim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmem_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;31m## the rest is a plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/home/ben/code/whisky/imaging/mem4_kp2pm.py\u001b[0m in \u001b[0;36mmem_image\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    148\u001b[0m                                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgain\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mchi2diff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m                         \u001b[1;31m# =======================================================================\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 150\u001b[1;33m                         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmake_iterstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    151\u001b[0m                         \u001b[1;31m# For the first iteration:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    152\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m/home/ben/code/whisky/imaging/mem4_kp2pm.py\u001b[0m in \u001b[0;36mmake_iterstep\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    193\u001b[0m \t\t\"\"\"\n\u001b[0;32m    194\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;31m# this was necessary for me at one point\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 195\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp_mod\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp2pm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    196\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchi2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp_mod\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkperr\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrvect\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp_mod\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkperr\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mAttributeError\u001b[0m: MemImage instance has no attribute 'kp2pm'"
+       ]
+      }
+     ],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
