--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:26936c8993616958a4204d07f4e592753b5b6c7e15ae69d5e9d9ea87eec84a0d"
+  "signature": "sha256:74246011e5d1476018ab9d9ded8f2e49bb3f6bc7d00545245d1b957839505f5c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,11 +44,11 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/usr/local/lib/python2.7/dist-packages/numpy/core/fromnumeric.py:2499: VisibleDeprecationWarning: `rank` is deprecated; use the `ndim` attribute or function instead. To find the rank of a matrix see `numpy.linalg.matrix_rank`.\n",
-        "  VisibleDeprecationWarning)\n"
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (kpi.py, line 187)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"whisky/kpi.py\"\u001b[1;36m, line \u001b[1;32m187\u001b[0m\n\u001b[1;33m    if usejit = True:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
        ]
       }
      ],
