diameter, not radius!

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b5ec275ac88dfbbd55d52607d51e08c12e25cee0914623f4154a5cbfd337f249"
+  "signature": "sha256:66b5fc1b5859a3b932d8f6d3bda0a2126743f20d88cde8570711896bc45241d9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,7 +126,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -146,12 +146,7 @@
       "\n",
       "#load data and calibrators - each of these may take several minutes \n",
       "\n",
-      "try:\n",
-      "    a = pysco.kpo('./kerphi/'+pupil+'.pick')\n",
-      "except:\n",
-      "    a = pysco.kpi('./kerphi/medcross.txt') # in case you need to make it - edit this!\n",
-      "    a.save_to_file('./kerphi/medcrossmodel.pick')\n",
-      "    a = pysco.kpo('./kerphi/'+pupil+'.pick')\n",
+      "a = pysco.kpo('./kerphi/'+pupil+'.pick')\n",
       "\n",
       "a.name = 'Palomar - ' + tnames[0]\n",
       "if no_kp:\n",
@@ -991,7 +986,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -1828,7 +1823,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -1878,7 +1873,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -1917,7 +1912,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -1952,7 +1947,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -3579,7 +3574,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a.kpd.shape"
+      "np.sqrt((a.kpi.mask[:,0]**2+a.kpi.mask[:,1]**2).max())"
      ],
      "language": "python",
      "metadata": {},
@@ -3587,104 +3582,21 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 23,
        "text": [
-        "(1255,)"
+        "2.3071646612842045"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "a.kpi.generate_bispectrum_matrix2()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Calculating bispectrum matrix. Will take a few minutes.\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 3 of 424 .  107711  bispectra found. Time taken: 1.7 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 28 of 424 .  201015  bispectra found. Time taken: 11.0 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 53 of 424 .  225721  bispectra found. Time taken: 20.0 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 78 of 424 .  231058  bispectra found. Time taken: 28.2 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 103 of 424 .  234679  bispectra found. Time taken: 35.9 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 128 of 424 .  237382  bispectra found. Time taken: 43.1 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 153 of 424 .  239171  bispectra found. Time taken: 49.6 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 178 of 424 .  239548  bispectra found. Time taken: 55.9 sec\n",
-        "Done"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 203 of 424 .  239605  bispectra found. Time taken: 61.8 sec\n",
-        "Done"
-       ]
-      }
-     ]
+     "outputs": []
     },
     {
      "cell_type": "code",
