new pupil model

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:66b5fc1b5859a3b932d8f6d3bda0a2126743f20d88cde8570711896bc45241d9"
+  "signature": "sha256:f8de98ed3543cdb8e730e1b8d4eb474bb07950fa704bd85dfab96b48f4bc716c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3574,7 +3574,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "np.sqrt((a.kpi.mask[:,0]**2+a.kpi.mask[:,1]**2).max())"
+      "np.sqrt((a.kpi.mask[:,0]**2+a.kpi.mask[:,1]**2).max())*2"
      ],
      "language": "python",
      "metadata": {},
@@ -3582,13 +3582,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 23,
+       "prompt_number": 24,
        "text": [
-        "2.3071646612842045"
+        "4.614329322568409"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
