fixed pupil model

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67e8f9748e3a9179f6a2e93e46554013ae39daa55aaeef410b9a60ec4c5ecb7b"
+  "signature": "sha256:c0f2ebf77949f13908d96a53ff4e4f1e39fa1818a79cfd8c22b74c7311246163"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3428,8 +3428,15 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "errors = np.copy(a.bspe)\n",
-      "print errors.shape"
+      "####################\n",
+      "## Simulate images!\n",
+      "####################\n",
+      "\n",
+      "sep, theta, contrast = 136., 86., 32.0\n",
+      "\n",
+      "image, coords = whisky.make_binary(sep,theta,contrast,spaxel=25.2,wavel=2.15e-6,sz=4096)\n",
+      "\n",
+      "whisky.write_to_fits(image,filename='binary_%.0f_%.0f_%.0f.fits' % (sep,theta,contrast))"
      ],
      "language": "python",
      "metadata": {},
@@ -3547,22 +3554,21 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a.kpi.nbuv\n",
-      "a.kpi."
+      "sep, theta, contrast = 136., 86., 32.0\n",
+      "print 'binary_%.0f_%.0f_%.0f.fits' % (sep,theta,contrast)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 13,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "1332"
+        "binary_136_86_32.fits\n"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
