switching all the names

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3af2bcc24a5101386924bee9506c5fb24f1dc8b92932081119c30d6d9bddf288"
+  "signature": "sha256:ef7321bcc2a24f17967e7ac8cf1260ae3d076142098bcdddef97932a62456ad3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,7 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Whisky is a modified distribution of pysco, available at https://github.com/benjaminpope/whisky .\n",
+      "This uses a public kernel phase distribution of 'pysco' (PYthon Self-Calibrating Observables), available at https://github.com/benjaminpope/pysco.\n",
       "\n",
       "The original pysco code as developed by Martinache, Pope and Ireland is available at https://code.google.com/p/pysco/ ."
      ]
@@ -32,8 +32,8 @@
      "input": [
       "import numpy as np\n",
       "import matplotlib.pyplot as plt\n",
-      "import whisky as pysco\n",
-      "from whisky.diffract_tools import *\n",
+      "import pysco\n",
+      "from pysco.diffract_tools import *\n",
       "import matplotlib as mpl\n",
       "\n",
       "import fitsio\n",
@@ -138,7 +138,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "After the \"import whisky\" command, the documentation for the code is\n",
+      "After the \"import pysco\" command, the documentation for the code is\n",
       "available typing \"help(pysco)\"."
      ]
     },
