--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a8e0d99a16384297ad73470f8fd0cc384bedf45ac5f13b2117a4c48d46d8f92b"
+  "signature": "sha256:acf386deb6ab6b5ea2bc10eaeb707012fd6adc4f402edf2b2984b340482c7c05"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,7 +57,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -75,17 +75,17 @@
       "bandn = 'Ks' \n",
       "# bandn = 'ch4' # this gives vaguely right astrometry at its best fit but a remarkably poor fit overall! try if you like\n",
       "\n",
-      "num = 0 #0 for alpha Oph, 1 for sim with kp params\n",
+      "num = 1 #0 for alpha Oph, 1 for sim with kp params\n",
       "\n",
       "tnames = ['alpOph','epsOph','epsHer']\n",
       "\n",
       "no_kp = False\n",
-      "bispec = True"
+      "bispec = False"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 57
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -128,11 +128,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Using medcrossmeas_2model pupil model.\n"
+        "Doing simulated observations\n",
+        "Using medcrossmeasmodel pupil model.\n"
        ]
       }
      ],
-     "prompt_number": 58
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -174,818 +175,35 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "File ./kerphi/medcrossmeas_2model.pick contains kpi information only\n",
+        "No bispec\n",
+        "File ./kerphi/medcrossmeasmodel.pick contains kpi information only"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "Bsp data was not loaded\n",
         "Vis2 data was not loaded\n",
         "1 frames will be open\n",
-        "\r",
-        "extracting kp from img   1/100"
+        "pscale 25.2\n",
+        "filter 2.145e-06\n",
+        "uv_samp maximum 196.113891092\n",
+        " no average"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "\r",
-        "extracting kp from img   2/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   3/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   4/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   5/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   6/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   7/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   8/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img   9/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  10/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  11/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  12/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  13/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  14/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  15/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  16/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  17/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  18/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  19/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  20/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  21/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  22/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  23/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  24/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  25/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  26/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  27/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  28/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  29/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  30/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  31/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  32/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  33/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  34/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  35/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  36/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  37/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  38/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  39/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  40/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  41/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  42/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  43/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  44/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  45/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  46/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  47/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  48/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  49/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  50/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  51/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  52/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  53/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  54/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  55/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  56/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  57/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  58/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  59/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  60/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  61/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  62/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  63/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  64/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  65/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  66/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  67/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  68/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  69/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  70/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  71/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  72/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  73/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  74/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  75/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  76/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  77/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  78/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  79/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  80/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  81/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  82/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  83/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  84/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  85/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  86/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  87/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  88/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  89/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  90/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  91/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  92/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  93/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  94/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  95/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  96/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  97/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  98/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img  99/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\r",
-        "extracting kp from img 100/100"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " no average\n",
-        "(100, 1201)\n",
-        "(1201,)\n",
-        "(100, 1454)\n"
+        "\n",
+        "(2692,)\n",
+        "(2692,)\n"
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
